# cback-python-mono

./: README.md  main.py  requirements.txt
.github/agents/: microservices.agent.md
.github/codeql/: codeql-config-template.yml
.github/workflows/: code-scanning.yml  codeql.yml
proj3/: pyproject.toml
proj6/: app.py
